--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,154 @@
+@import url('https://fonts.googleapis.com/css2?family=Finlandica:ital@1&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@1,400;1,600&display=swap');
 .App {
   text-align: center;
+ height: 100vh;
+ background-image: url("../src/Components/images/background1.jpg");
+ background-size: 100% 100%;
+background-repeat: no-repeat;
+background-attachment: fixed;
+overflow-y: scroll;
+}
+ 
+
+.hey:hover {
+
+  color: #c9ada7;
+  letter-spacing: 6px;
+}
+.hey{
+  
+  color: white;
+ 
+font-family: 'Finlandica', sans-serif;
+  font-weight: 700;
+
+}
+.table{
+  background-color: rgb(73, 70, 70);
+  border: 4px solid white;
+}
+.nam:hover {
+
+  color: #2ec4b6;
+  letter-spacing: 5px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nam{
+  color: white;
+  font-family: 'Finlandica', sans-serif;
+  font-weight: bolder;
+  letter-spacing: 3px;
+}
+.dev:hover{
+  color:#c5d86d;
+  letter-spacing: 5px;
+}
+.dev{
+  color: white;
+    letter-spacing: 2px;
+  font-family: 'Finlandica', sans-serif;
+}
+.navbar-brand:hover{
+  letter-spacing: 2px;
+}
+.nav-item:hover{
+  
+  /* font-weight: 10000; */
+  letter-spacing: 3px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.divv{
+  height: 90vh;
+  justify-content: center;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
+
+  
+}
+.icon{
+height: 3rem;
+width: 3rem;
+  border-radius: 5px;
+background-color: white;
+}
+.con{
+  margin-bottom: 1rem;
+}
+.icon1{
+display: inline;
+
+
+margin-right: 2rem;
+
+}
+.aboutm{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 90vh;
+}
+
+.plat{
+  display: inline-grid;
+}
+.pic1,.pic2,.pic3,.pic4,.pic5{
+  background-color: white;
+  padding: auto;
+  border-radius: 20px;
+  margin-top: 2rem;
+}
+.pr:hover{
+  letter-spacing: 4px;
+}
+.pr{
+  font-weight: bolder;
+letter-spacing: 1px;
+}
+
+.certe{
+font-weight: bolder;
+letter-spacing: 1px;}
+.certe:hover{
+  letter-spacing: 4px;
+}
+.pic5:hover{
+transform: scale(1.2);
+box-shadow: 0px 0px 15px white;
+}
+.pic4:hover {
+  transform: scale(1.2);
+box-shadow: 0px 0px 15px white;
+}
+.pic3:hover {
+  transform: scale(1.2);
+box-shadow: 0px 0px 15px white;
+}
+.pic2:hover {
+  transform: scale(1.2);
+box-shadow: 0px 0px 15px white;
+}
+.pic1:hover {
+  transform: scale(1.2);
+box-shadow: 0px 0px 15px white;
+}
+.ud{
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+margin-top: 20px;
+width: 40rem;
+  padding: 5px;
+}
+.ude{
   color: white;
+  margin-left: 10px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ud:hover{
+  box-shadow: 0px 0px 15px white;
+  text-decoration: none;
 }
