--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ font-family: 'Finlandica', sans-serif;
 
   
 }
+
 .icon{
 height: 3rem;
 width: 3rem;
@@ -76,6 +77,7 @@ background-color: white;
 }
 .con{
   margin-bottom: 1rem;
+  font-size:larger;
 }
 .icon1{
 display: inline;
@@ -83,6 +85,9 @@ display: inline;
 
 margin-right: 2rem;
 
+}
+.icon:hover{
+   transform: scale(1.3);
 }
 .aboutm{
   justify-content: center;
@@ -151,4 +156,37 @@ width: 40rem;
 .ud:hover{
   box-shadow: 0px 0px 15px white;
   text-decoration: none;
+}
+.box {
+  justify-content: center;
+  display: flex;
+  box-shadow: 0px 0px 5px rgb(0 0 0 / 40%);
+  width: 100%;
+  height: 350px;
+}
+.formm {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  width: 32rem;
+}
+
+.form-button {
+  background-color: #3a5aff;
+justify-content: center;
+  border-radius: 7px;
+  color: white;
+  padding: 5px 23px;
+  margin-top: 2rem;
+}
+@media only screen and (max-width: 660px) {
+  .formm {
+    width: 15rem;
+    margin: auto;
+  }
+}
+@media only screen and (max-width: 620px) {
+  .ud {
+    width: 85%;
+  }
 }
